# systematically-improving-rag

week1_bootstrap_evals/: make_product_reviews.ipynb  products_prompt.txt  pyproject.toml  reviews.json  reviews_prompt.txt
