[tool.poetry]
name = "week1-bootstrap-evals"
version = "0.1.0"
description = ""
authors = ["Dipam <dipam44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
notebook = "6.5.6"
instructor = "^1.4.0"
openai = "^1.42.0"
lancedb = "^0.12.0"
python-dotenv = "^1.0.1"
tantivy = "^0.22.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
